--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mmovil",
+  "name": "tingsystems",
   "version": "0.0.1",
-  "description": "Client of MM",
+  "description": "web for tingsystems",
   "bugs": {
     "url": "http://tingsystems.com",
     "email": "soporte@tingsystems.com"
