--- a/bower.json
+++ b/bower.json
@@ -4,9 +4,9 @@
   "description": "Web for Tingsystems",
   "dependencies": {
     "jquery": "~2.1.4",
+    "angular": "~1.4.8",
     "angular-resource": "~1.4.8",
     "angular-ui-router": "~0.2.15",
-    "bootstrap": "~3.3.6",
-    "angular": "~1.4.8"
+    "bootstrap": "~3.3.6"
   }
 }
