--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "angular": "~1.4.8",
     "angular-resource": "~1.4.8",
     "angular-ui-router": "~0.2.15",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "wow": "~1.1.2",
+    "animate.css": "~3.4.0"
   }
 }
