--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.6",
     "wow": "~1.1.2",
-    "animate.css": "~3.4.0"
+    "animate.css": "~3.4.0",
+    "font-awesome": "fontawesome#~4.5.0"
   }
 }
