--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "bootstrap": "~3.3.6",
     "wow": "~1.1.2",
     "animate.css": "~3.4.0",
-    "font-awesome": "fontawesome#~4.5.0"
+    "font-awesome": "fontawesome#~4.5.0",
+    "angular-sanitize": "~1.4.8"
   }
 }
