--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,10 @@
     "angular": "~1.4.8",
     "angular-resource": "~1.4.8",
     "angular-ui-router": "~0.2.15",
-    "bootstrap": "~3.3.6",
     "wow": "~1.1.2",
     "animate.css": "~3.4.0",
     "font-awesome": "fontawesome#~4.5.0",
-    "angular-sanitize": "~1.4.8"
+    "angular-sanitize": "~1.4.8",
+    "bootstrap": "~3.3.6"
   }
 }
