--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "font-awesome": "fontawesome#~4.5.0",
     "angular-sanitize": "~1.4.8",
     "bootstrap": "~3.3.6",
-    "angular-loading-bar": "~0.8.0"
+    "angular-loading-bar": "~0.8.0",
+    "ngInfiniteScroll": "~1.2.2"
   }
 }
