--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,19 @@
     "bootstrap": "~3.3.6",
     "angular-loading-bar": "~0.8.0",
     "ngInfiniteScroll": "~1.2.2"
+  },
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "dist/css/bootstrap.css",
+        "less/bootstrap.less",
+        "dist/js/bootstrap.js"
+      ]
+    },
+    "font-awesome": {
+      "main": [
+        "css/font-awesome.css"
+      ]
+    }
   }
 }
