--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-sanitize": "~1.4.8",
     "bootstrap": "~3.3.6",
     "angular-loading-bar": "~0.8.0",
-    "ngInfiniteScroll": "~1.2.2"
+    "ngInfiniteScroll": "~1.2.2",
+    "owl.carousel": "~2.1.1"
   }
 }
