--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,7 @@
     "angular-sanitize": "~1.4.8",
     "bootstrap": "~3.3.6",
     "angular-loading-bar": "~0.8.0",
-    "ngInfiniteScroll": "~1.2.2",
-    "angular-toasty": "^1.0.5",
-    "angular-scroll": "^1.0.0"
+    "ngInfiniteScroll": "~1.2.2"
   },
   "overrides": {
     "bootstrap": {
