Commit for update files

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "bootstrap": "~3.3.6",
     "angular-loading-bar": "~0.8.0",
     "ngInfiniteScroll": "~1.2.2",
-    "owl.carousel": "~2.1.1"
+    "owl.carousel": "~2.1.1",
+    "angular-bootstrap": "^1.3.2"
   },
   "overrides": {
     "bootstrap": {
