--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,10 @@
     "angular-loading-bar": "~0.8.0",
     "ngInfiniteScroll": "~1.2.2",
     "owl.carousel": "~2.1.1",
-    "angular-bootstrap": "^1.3.2",
     "angular-deckgrid": "^0.5.0",
-    "lightbox2": "^2.8.2"
+    "lightbox2": "^2.8.2",
+    "angular-animate": "^1.5.5",
+    "angular-bootstrap": "1.1.2"
   },
   "overrides": {
     "bootstrap": {
