--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-deckgrid": "^0.5.0",
     "lightbox2": "^2.8.2",
     "angular-animate": "^1.5.5",
-    "angular-bootstrap": "1.1.2"
+    "angular-bootstrap": "1.1.2",
+    "ng-repeat-owl-carousel": "*"
   },
   "overrides": {
     "bootstrap": {
@@ -31,6 +32,11 @@
     "font-awesome": {
       "main": [
         "css/font-awesome.css"
+      ]
+    },
+    "ng-repeat-owl-carousel": {
+      "main": [
+        "dist/ngRepeatOwlCarousel.min.js"
       ]
     }
   }
