--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "lightbox2": "^2.8.2",
     "angular-animate": "^1.5.5",
     "angular-bootstrap": "1.1.2",
-    "ng-repeat-owl-carousel": "*"
+    "ng-repeat-owl-carousel": "*",
+    "angular-block-ui": "^0.2.2"
   },
   "overrides": {
     "bootstrap": {
