Add untracked files

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-bootstrap": "1.1.2",
     "ng-repeat-owl-carousel": "*",
     "angular-block-ui": "^0.2.2",
-    "angular-toasty": "^1.0.5"
+    "angular-toasty": "^1.0.5",
+    "angular-scroll": "^1.0.0"
   },
   "overrides": {
     "bootstrap": {
