--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "ng-repeat-owl-carousel": "*",
     "angular-block-ui": "^0.2.2",
     "angular-toasty": "^1.0.5",
-    "angular-scroll": "^1.0.0"
+    "angular-scroll": "^1.0.0",
+    "angular-truncate": "*"
   },
   "overrides": {
     "bootstrap": {
