--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "url": "https://gitlab.com/tingsystems/leonor"
   },
   "dependencies": {
+    "gulp-stylus": "^2.5.0",
+    "gulp-uglify": "^1.5.4",
     "owl.carousel": "0.0.1"
   },
   "devDependencies": {
