--- a/bower.json
+++ b/bower.json
@@ -3,26 +3,26 @@
   "version": "0.0.1",
   "description": "Web for Tingsystems",
   "dependencies": {
-    "jquery": "~2.1.4",
-    "angular": "~1.4.8",
-    "angular-resource": "~1.4.8",
-    "angular-ui-router": "~0.2.15",
+    "jquery": "2.1.4",
+    "angular": "1.4.14",
+    "angular-resource": "1.4.14",
+    "angular-ui-router": "0.2.18",
     "animate.css": "~3.4.0",
     "font-awesome": "fontawesome#~4.5.0",
-    "angular-sanitize": "~1.4.8",
+    "angular-sanitize": "1.4.14",
     "bootstrap": "~3.3.6",
     "ngInfiniteScroll": "~1.2.2",
     "owl.carousel": "~2.1.1",
     "angular-deckgrid": "^0.5.0",
     "lightbox2": "^2.8.2",
-    "angular-animate": "^1.5.5",
+    "angular-animate": "1.5.9",
     "angular-bootstrap": "1.1.2",
     "ng-repeat-owl-carousel": "*",
     "angular-block-ui": "^0.2.2",
     "angular-toasty": "^1.0.5",
     "angular-scroll": "^1.0.0",
     "angular-truncate": "*",
-    "angular-touch": "^1.5.7",
+    "angular-touch": "1.5.9",
     "ngstorage": "^0.3.11",
     "angular-google-maps": "^2.4.0"
   },
