add notification srv

--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "angular-truncate": "*",
     "angular-touch": "1.5.9",
     "ngstorage": "^0.3.11",
-    "angular-google-maps": "^2.4.0"
+    "angular-google-maps": "^2.4.0",
+    "ngSweetAlert": "angular-sweetalert#^1.1.2"
   },
   "overrides": {
     "bootstrap": {
