--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "ngstorage": "^0.3.11",
     "angular-google-maps": "^2.4.0",
     "ngSweetAlert": "angular-sweetalert#^1.1.2",
-    "satellizer": "^0.15.5"
+    "satellizer": "^0.15.5",
+    "angular-messages": "1.4.14"
   },
   "overrides": {
     "bootstrap": {
