--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-google-maps": "^2.4.0",
     "ngSweetAlert": "angular-sweetalert#^1.1.2",
     "satellizer": "^0.15.5",
-    "angular-messages": "1.4.14"
+    "angular-messages": "1.4.14",
+    "ng-table": "^4.0.0"
   },
   "overrides": {
     "bootstrap": {
