payment method accordion

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "ng-repeat-owl-carousel": "*",
     "angular-block-ui": "^0.2.2",
     "angular-toasty": "^1.0.5",
-    "angular-scroll": "^1.0.0",
+    "angular-scroll": "1.0.0",
     "angular-truncate": "*",
     "angular-touch": "1.5.9",
     "ngstorage": "^0.3.11",
