--- a/bower.json
+++ b/bower.json
@@ -26,10 +26,10 @@
     "angular-google-maps": "^2.4.0",
     "ngSweetAlert": "angular-sweetalert#^1.1.2",
     "satellizer": "^0.15.5",
-    "angular-messages": "^1.6.4",
     "angular-ui-select": "0.17.0",
     "ng-table": "^1.0.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "angular-messages": "^1.6.4"
   },
   "overrides": {
     "bootstrap": {
