--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
     "angular-ui-select": "0.17.0",
     "ng-table": "^1.0.0",
     "font-awesome": "^4.7.0",
-    "angular-messages": "^1.6.4"
+    "angular-messages": "1.4.14"
   },
   "overrides": {
     "bootstrap": {
