--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "angular-messages": "^1.6.4",
+    "gulp-ref-hash": "0.0.2",
     "gulp-stylus": "^2.5.0",
     "gulp-uglify": "^1.5.4",
     "owl.carousel": "0.0.1"
