--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "font-awesome": "^4.7.0",
     "angular-messages": "1.4.14",
     "angular-material": "^1.1.5",
-    "angulartics-google-analytics": "^0.4.0"
+    "angulartics-google-analytics": "^0.4.0",
+    "ng-file-upload": "^12.2.13"
   },
   "overrides": {
     "bootstrap": {
