--- a/bower.json
+++ b/bower.json
@@ -30,8 +30,7 @@
     "angular-messages": "1.4.14",
     "angular-material": "^1.1.5",
     "angulartics-google-analytics": "^0.4.0",
-    "ng-file-upload": "^12.2.13",
-    "angular-elevate-zoom": "^1.0.3"
+    "ng-file-upload": "^12.2.13"
   },
   "overrides": {
     "bootstrap": {
