fix bower dependencies

--- a/bower.json
+++ b/bower.json
@@ -3,34 +3,33 @@
   "version": "0.0.1",
   "description": "Web for Tingsystems",
   "dependencies": {
-    "jquery": "2.1.4",
-    "angular-resource": "1.4.14",
-    "angular-ui-router": "0.2.18",
-    "animate.css": "~3.4.0",
-    "angular-sanitize": "1.4.14",
-    "bootstrap": "~3.3.6",
-    "ngInfiniteScroll": "~1.2.2",
-    "owl.carousel": "~2.1.1",
+    "angular": "^1.6.8",
+    "angular-resource": "^1.6.8",
+    "angular-ui-router": "^1.0.13",
+    "angular-sanitize": "^1.6.8",
+    "angular-animate": "^1.6.8",
+    "angular-truncate": "*",
+    "angular-touch": "^1.6.8",
+    "angular-material": "^1.1.6",
+    "jquery": "^3.3.1",
+    "animate.css": "^3.5.2",
+    "ngInfiniteScroll": "^1.3.4",
+    "owl.carousel": "^2.2.1",
     "angular-deckgrid": "^0.5.0",
-    "lightbox2": "^2.8.2",
-    "angular-animate": "1.5.9",
-    "angular-bootstrap": "1.1.2",
+    "lightbox2": "^2.10.0",
+    "angular-bootstrap": "^2.5.0",
     "ng-repeat-owl-carousel": "*",
     "angular-block-ui": "^0.2.2",
-    "angular-toasty": "^1.0.5",
-    "angular-scroll": "1.0.0",
-    "angular-truncate": "*",
-    "angular-touch": "1.5.9",
+    "angular-scroll": "^1.0.2",
     "ngstorage": "^0.3.11",
-    "ngSweetAlert": "angular-sweetalert#^1.1.2",
+    "ngSweetAlert": "^1.1.2",
     "satellizer": "^0.15.5",
-    "angular-ui-select": "0.17.0",
-    "ng-table": "^1.0.0",
     "font-awesome": "^4.7.0",
-    "angular-messages": "1.4.14",
-    "angular-material": "^1.1.5",
     "angulartics-google-analytics": "^0.4.0",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "angular-ui-select": "^0.19.8",
+    "ng-table": "1.0.0",
+    "bootstrap": "3.3.6"
   },
   "overrides": {
     "bootstrap": {
