--- a/bower.json
+++ b/bower.json
@@ -22,14 +22,14 @@
     "angular-block-ui": "^0.2.2",
     "angular-scroll": "^1.0.2",
     "ngstorage": "^0.3.11",
-    "ngSweetAlert": "^1.1.2",
     "satellizer": "^0.15.5",
     "font-awesome": "^4.7.0",
     "angulartics-google-analytics": "^0.4.0",
     "ng-file-upload": "^12.2.13",
     "angular-ui-select": "^0.19.8",
     "ng-table": "1.0.0",
-    "bootstrap": "3.3.6"
+    "bootstrap": "3.3.6",
+    "ngSweetAlert": "angular-sweetalert#^1.1.2"
   },
   "overrides": {
     "bootstrap": {
