--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "angular-bootstrap": "^2.5.0",
     "bootstrap": "^4.0.0",
     "popper.js": "^1.14.5",
-    "wip-image-zoom": "^1.0.4"
+    "wip-image-zoom": "^1.0.4",
+    "underscore": "^1.9.1"
   },
   "overrides": {
     "bootstrap": {
