--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "bootstrap": "^4.0.0",
     "popper.js": "^1.14.5",
     "wip-image-zoom": "^1.0.4",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "angular-http-auth": "^1.5.0"
   },
   "overrides": {
     "bootstrap": {
