--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,15 @@
   "version": "0.0.1",
   "description": "Web for Tingsystems",
   "dependencies": {
-    "angular": "^1.7.8",
-    "angular-resource": "^1.7.8",
+    "angular": "1.5.8",
+    "angular-resource": "1.5.8",
     "angular-ui-router": "^1.0.13",
-    "angular-sanitize": "^1.7.8",
-    "angular-animate": "^1.7.8",
+    "angular-sanitize": "1.5.8",
+    "angular-animate": "1.5.8",
     "angular-truncate": "*",
-    "angular-touch": "^1.7.8",
+    "angular-touch": "1.5.8",
+    "angular-aria": "1.5.8",
+    "angular-messages": "1.5.8",
     "angular-material": "^1.1.18",
     "jquery": "^3.3.1",
     "animate.css": "^3.5.2",
