--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "bootstrap": "^4.0.0",
     "popper.js": "^1.14.5",
     "wip-image-zoom": "^1.0.4",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "owl.carousel": "^2.2.1"
   },
   "overrides": {
     "bootstrap": {
